@@ -238,6 +238,10 @@ Library
 - Issue #1149804: macostools.mkdirs now even works when another process
   creates one of the needed subdirectories.
 
+- Issue #900506: added --no-zipimport flag to the bundlebuilder script
+
+- Issue #841800: bundlebuilder now works with 'python -O'
+
 Tools/Demos
 -----------
 
